--- a/src/styles/modules/Header.module.css
+++ b/src/styles/modules/Header.module.css
@@ -1,3 +1,10 @@
+.header {
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    height: 12svh;
+}
+
 .navigation {
     display: flex;
     align-items: center;
@@ -6,14 +13,14 @@
     position: relative;
     align-items: flex-start;
     justify-content: flex-end;
-    padding: 20px;
 }
 
 .navigation a {
     text-decoration: none;
-    padding: 6px 15px;
+    padding: 2em 0;
+    /* padding: 6px 15px; */
     border-radius: 20px;
-    margin: 0 10px;
+    /* margin: 0 10px; */
     transition: .3s;
 }
 
