--- a/src/styles/modules/Header.module.css
+++ b/src/styles/modules/Header.module.css
@@ -1,9 +1,12 @@
 .header {
+  position: absolute;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   z-index: 5;
   background: #002650;
+  width: 100%;
   height: 8svh;
 }
 
