--- a/src/styles/modules/Nav.module.css
+++ b/src/styles/modules/Nav.module.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
+  position: relative;
   z-index: 10;
   top: 0;
   background-color: #002855;
   color: #fff;
-  min-width: 8svh;
+  width: 9svh;
   height: 100svh;
   user-select: none;
 }
