--- a/src/styles/modules/Nav.module.css
+++ b/src/styles/modules/Nav.module.css
@@ -11,19 +11,17 @@
     height: 100svh;
     user-select: none;
     transition: 0.5s;
-
-
 }
 
 .header.expand {
     width: 14svw;
     transition: 0.3s;
-
 }
 
 .header .containerLogo {
     height: 8svh;
     display: flex;
+    padding: 2em 0.5em;
     align-items: center;
     /* Cambia la posición a absoluta */
     position: absolute;
@@ -57,13 +55,13 @@
     justify-content: flex-start;
     /* Modificado para que los íconos se mantengan a la izquierda */
     gap: 1em;
-    width: 100%;
     text-decoration: none;
     color: #fff;
-    padding: 2em 1em;
+    padding: 2em 1.5em;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     white-space: nowrap;
+    /* Esto empujará el contenido hacia la izquierda */
 }
 
 
