--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    height: 100svh;
-    background-color: #033468;
+  height: 100svh;
+  background-color: #033468;
+  font-family: 'Poppins', sans-serif;
 }
