--- a/src/styles/modules/Template.module.css
+++ b/src/styles/modules/Template.module.css
@@ -26,6 +26,8 @@
 .container_content {
   width: 100%;
   height: 100%;
+  display: flex;
+  gap: 1em;
   background-color: #002650;
   padding: 1.5em;
   border-radius: 1em;
