--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,8 +45,16 @@ input[type='number']::-webkit-outer-spin-button {
   justify-content: space-between;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .flex-column {
   flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
 }
 
 .gap-1 {
