add descuent but no used

--- a/src/styles/modules/Input.module.css
+++ b/src/styles/modules/Input.module.css
@@ -13,6 +13,10 @@
   border-radius: 8px;
 }
 
+.label input:disabled {
+  opacity: 0.8;
+}
+
 .label input:focus-visible,
 .label textarea:focus-visible {
   outline: none;
